--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
-	<groupId>technicalCodingChallange</groupId>
+	<groupId>player-service</groupId>
 	<artifactId>player-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>player-service</name>
@@ -16,7 +16,6 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<openapi-generator-maven-plugin.version>3.3.4</openapi-generator-maven-plugin.version>
-		<swagger.version>2.9.2</swagger.version>
 		<base.package>player-service</base.package>
 
 	</properties>
@@ -32,13 +31,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.swagger</groupId>
-			<artifactId>swagger-annotations</artifactId>
-			<version>1.5.7</version>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.220</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -62,11 +57,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.swagger</groupId>
-			<artifactId>swagger-annotations</artifactId>
-			<version>1.5.7</version>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
@@ -75,16 +65,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.7.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.rest-assured</groupId>
@@ -117,37 +97,6 @@
 					<target>11</target>
 				</configuration>
 			</plugin>
-<!--			<plugin>-->
-<!--				<groupId>org.openapitools</groupId>-->
-<!--				<artifactId>openapi-generator-maven-plugin</artifactId>-->
-<!--				<version>${openapi-generator-maven-plugin.version}</version>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>player-service</id>-->
-<!--						<goals>-->
-<!--							<goal>generate</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<skipIfSpecIsUnchanged>false</skipIfSpecIsUnchanged>-->
-<!--							<inputSpec>${project.basedir}/src/main/resources/static/player-service.yaml-->
-<!--							</inputSpec>-->
-<!--							<generatorName>spring</generatorName>-->
-<!--							<output>${project.basedir}</output>-->
-<!--							<configOptions>-->
-<!--								<modelPackage>${base.package}.model</modelPackage>-->
-<!--								<apiPackage>${base.package}.player-service.controller</apiPackage>-->
-<!--								<invokerPackage>${base.package}.player-service.controller</invokerPackage>-->
-<!--								<sourceFolder>src/main/generated</sourceFolder>-->
-<!--								<serializableModel>true</serializableModel>-->
-<!--								<dateLibrary>java8</dateLibrary>-->
-<!--								<basePackage>${base.package}</basePackage>-->
-<!--								<delegatePattern>false</delegatePattern>-->
-<!--							</configOptions>-->
-<!--							<ignoreFileOverride>${project.basedir}/.openapi-generator-ignore</ignoreFileOverride>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
 		</plugins>
 	</build>
 
